--- a/ksuie_robbery/readme
+++ b/ksuie_robbery/readme
@@ -7,4 +7,4 @@ If all the items are in shared.lua then you also need to verify you have qb-door
 You will probably also need to find and fix a thermite and a hacking script to get it to work, because those are pretty much all broken also.  
 Good Luck.
 
-You could always just check out our server and see how it works: https://sites.google.com/view/miscreantmafiarp
+You could always just check out our server and see how it works you can find the details here: https://sites.google.com/view/miscreantmafiarp
